<resources>
    <string name="app_name">PolarDataManagement</string>
    <string name="main_screen_title">Polar Data Manager</string>

    <string name="app_description_text">Search for available Polar Devices and Connect to see Heart Rate.</string>
    <string name="sign_in_btn_txt">Sign In</string>
    <string name="sign_out_btn_txt">Sign Out</string>

    <string name="pair_polar_device">Scan</string>
    <string name="scanDevicesMsg">Scanning for Devices</string>
    <string name="DevicesFoundMsg">Devices found</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected_indicator">Connected</string>

    <string name="heartImageDescription">heartImage</string>
    <string name="heart_rate_text">Heart Rate</string>
    <string name="emptyHRText">--</string>
    <string name="no_connected_devices">No connected Devices</string>
    <string name="nothing">" "</string>
    <string name="expand">expand</string>
    <string name="database_URL">https://polardatamanagement-cd11a-default-rtdb.europe-west1.firebasedatabase.app/</string>

    <string name="sampling_rate">Sampling rate</string>
    <string name="resolution">Resolution</string>
    <string name="range">Range</string>
    <string name="channels">Channels</string>
    <string name="ok">OK</string>
    <string name="get_ecg">Get ECG</string>

    <string name="hr_title">HR and RR vs. Time (for 5 min)</string>
    <string name="hr_range_title">HR, /sec RR, ms/10</string>
    <string name="steps">Steps</string>
    <string name="user_icon">user_icon</string>
    <string name="confirm_exit_msg">When exiting application, the connection of the Polar Device will be lost. Steps will still be calculated. \n \n Are you sure you want to exit?</string>
    <string name="calculate_hrv">Calculate HRV</string>
</resources>