<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:cardBackgroundColor="@color/teal_700"
        app:cardCornerRadius="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/appTitleTextView"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/lemon"
                android:gravity="center_vertical"
                android:text="@string/main_screen_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#263238"
                app:autoSizeTextType="none" />

            <Button
                android:id="@+id/signOutBtn"
                style="@android:style/Widget.Material.Light.Button.Borderless.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_out_btn_txt"
                android:textColor="#000000"
                android:visibility="invisible" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/appDescriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/app_description_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.083" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/UserConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.269">

            <LinearLayout
                android:id="@+id/baseView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/whatIsConnectedIndicatorTxtView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.95"
                        android:gravity="center_horizontal"
                        android:text="@string/no_connected_devices"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/arrow_btn"
                        style="@android:style/Widget.DeviceDefault.ImageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="0.1"
                        android:background="@color/cream"
                        android:contentDescription="@string/nothing"
                        app:srcCompat="@drawable/ic_baseline_expand_more_24"
                        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/hiddenView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:id="@+id/linearMain2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="center_vertical|end"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/displayMsgTxtView"
                            style="@android:style/Widget.Material.Light.TextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:gravity="center" />

                        <ProgressBar
                            android:id="@+id/progressBarScanDevices"
                            style="@android:style/Widget.Material.Light.ProgressBar.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:visibility="invisible" />

                        <Button
                            android:id="@+id/ScanDevicesBtn"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pair_polar_device"
                            android:textColor="#3F51B5" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/devicesRclView"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="8dp" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:cardBackgroundColor="@color/cream"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.25">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="86dp"
                    android:layout_height="91dp"
                    android:contentDescription="@string/heartImageDescription"
                    app:srcCompat="@drawable/heart" />

                <TextView
                    android:id="@+id/heartRateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/heart_rate_text"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                <TextView
                    android:id="@+id/displayHeartRateTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emptyHRText"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textSize="18sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/signInBtn"
        style="@android:style/Widget.Material.Light.Button.Borderless.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_btn_txt"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appDescriptionTextView"
        app:layout_constraintVertical_bias="0.359" />

</androidx.constraintlayout.widget.ConstraintLayout>